# lanvas-backend

./: .env.sample  .flake8  .gitignore  README.md  celery_tasks.py  main.py  pyproject.toml  pytest.ini  settings.py  setup.py  test.py
analysis/: misconceptions.py  topics.py
chains/: rag.py
db/: supabase.py  vectorstore.py
experiments/theory-of-mind/bloom-v0/: bloom-v0.ipynb
experiments/theory-of-mind/bloom-v0/prompts/: response.yaml
middlewares/: cors.py
middlewares/auth/: auth_bearer.py  jwt_token_handler.py
models/: user_identity.py
parsers/: main.py  pdf.py
prompts/: chat.py
routes/course/: deps.py  dto.py  router.py  schemas.py  services.py
routes/course_analytics/: router.py  services.py
routes/course_chat_messages/: router.py  schemas.py  services.py
routes/course_chat_misconceptions/: schemas.py  services.py
routes/course_chat_topics/: schemas.py  services.py
routes/course_chats/: deps.py  router.py  schemas.py  services.py
routes/course_folders/: router.py  schemas.py  services.py
routes/course_materials/: constants.py  router.py  schemas.py  services.py  utils.py
routes/course_members/: router.py  schemas.py  services.py
services/: course_folders.py  course_materials.py
supabase/migrations/: 20240608235235_remote_schema.sql
tests/: utils.py
tests/unit_tests/: test_chat_history.py  test_course_analytics.py  test_topic_extraction.py  test_unique_topic_extractor.py
utils/: chat_message_history.py  datetime.py
